fixes visibility from empty tag .entry-content

--- a/assets/css/scss/layout/_archive.scss
+++ b/assets/css/scss/layout/_archive.scss
@@ -289,7 +289,10 @@
 		.lsx-to-archive-template-grid & { display: none; }
 	}
 
-	& + .entry-content:empty { display: none; }
+	&,
+	& + .lsx-to-archive-content-tagline {
+		& + .entry-content:empty { display: none; }
+	}
 }
 
 .lsx-to-archive-content-tagline {
