--- a/assets/css/style-rtl.css
+++ b/assets/css/style-rtl.css
@@ -1319,7 +1319,7 @@
 
 .lsx-to-archive-template-grid .lsx-to-archive-content-title .lsx-to-label { display: none; }
 
-.lsx-to-archive-content-title + .entry-content:empty { display: none; }
+.lsx-to-archive-content-title + .entry-content:empty, .lsx-to-archive-content-title + .lsx-to-archive-content-tagline + .entry-content:empty { display: none; }
 
 .lsx-to-archive-content-tagline:last-child { margin-bottom: 0; }
 
